feat: добавлена обработка url с помощью эвристики и URLhaus базы данных
- Интегрирован URLhaus API для проверки вредоносных URL
